src/tests/ci/assignment_3_arrays_io_llvm/valid/07_printf_multiple_args.c
#include <stdio.h>

int main() {
    int x = 5;
    float y = 2.5;
    char c = 'a';
    printf("%d %f %c", x, y, c);
    return 0;
}
