src/tests/ci/assignment_3_arrays_io_llvm/invalid_semantic/06_printf_wrong_arg_count.c
#include <stdio.h>

int main() {
    printf("%d %d", 5);
    return 0;
}
